--- a/style.css
+++ b/style.css
@@ -4,11 +4,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    outline: none;
+    list-style: none;
+}
+html{
     scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif;;
+}
+.main-header .header-logo img {
+    width: 50px;
+    height: 50px;
 }
 .main-header{
-    position: fixed;
+    position: sticky;
+    top: 0;
     background-color: #1b1919;
     width: 100%;
     height: 100px;
@@ -85,6 +94,74 @@ header ul li a:hover{
     color: white;
 
 }
+.section-mother {
+    background-image: url(./images/fundo.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    height: fit-content;
+}
+.filmes{
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    font-size: 35px;
+    font-weight: 500;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #f9f7fc;
+    text-shadow: 0.2em 0.2em 0.1em #0b0b0b;
+}
+.image-container {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    margin-top: 30px;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+}
+.image {
+    width: 300px;
+    height: 500px;
+    background-color: #0c0b0b83;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    border-radius: 20px;
+}
+.image-container .image p{
+    text-align: center;
+    color: #efe2fc;
+}
+.card-filme {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 20px 20px 10px 10px;
+}
+.image p {
+    font-weight: 700;
+    font-family: 'Indie Flower', cursive;
+    color: #f0f8ff;
+}
+.image-container .image button {
+    width: 100px;
+    margin-bottom: 15px;
+    background-color: #ffc4c4d5;
+    border-radius: 15px;
+    border-color: #9e86b2af;
+    transition: 0.3s;
+    color: rgb(11, 12, 12);
+}
+.image-container .image button:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.image-container .image button a {
+    text-decoration: none;
+}
+
 .main-footer{
     background-color: #1b1919;
     display: flex;
@@ -125,4 +202,95 @@ header ul li a:hover{
     text-align: center;
     color: gray;
     padding: 24px;
+}
+.main-header-form {
+    position: sticky;
+    top: 0;
+    background-color: #070505;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header-logo-form{
+    display: flex;
+    align-items: center;
+    color: #a90000;
+    font-size: 40px;
+
+}
+.header-logo-form img {
+    width: 40px;
+    height: 40px;
+    
+}
+.after-video1 {
+    background-image: url(./images/red-black-horror-background-dark-grunge-red-texture-concrete-red-black-horror-background-dark-grunge-red-texture-concrete-230525627.jpg);
+    height: 500px;
+    display: flex;
+    padding: 100px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 50px;
+}
+.main-form {
+    background-color:#a90000;
+    width: 500px;
+    height: fit-content;
+    border-radius: 15px;
+    border-color: #a90000;
+    display: flex;
+    justify-content: center;
+}
+.news{
+    text-align: center;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    color: #06070700;
+}
+
+.form input {
+    width: 400px;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    background-color: #050a0525;
+}
+
+.form input::-webkit-input-placeholder {
+    padding-left: 5px;
+}
+
+.form label {
+    color: #0d0808;
+}
+
+.form-button {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 30px;
+}
+
+.form-button button {
+    padding: 10px;
+    border-radius: 15px;
+    border: none;
+    background-color: #662929b7;
+    color: #100909b7;
+}
+
+.form-button button:hover {
+    transform: scale(1.06);
+    transition: 0.3s;
+    cursor: pointer;
+}
+.return{
+    color: #efe2fc;
+    text-decoration: none;
 }
